# kengine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  BaseFunction.hpp  CMakeLists.txt  Component.cpp  Component.hpp  Component.md  ComponentManager.hpp  ComponentManager.md  ComponentSettings.hpp  ComponentSettings.md  Entities.cpp  Entities.hpp  Entities.inl  Entities.md  Entity.hpp  Entity.inl  Entity.md  EntityCreator.hpp  EntityCreator.md  EntityFactory.hpp  EntityFactory.md  EntityManager.cpp  EntityManager.hpp  EntityManager.md  ExtensibleFactory.md  GameObject.cpp  GameObject.hpp  GameObject.md  IComponent.hpp  ISystem.hpp  LICENSE  README.md  ScriptSystem.hpp  ScriptSystem.md  SerializableComponent.hpp  SerializableComponent.md  System.hpp  (+9 more)
aur_utils/: CMakeLists.txt  clean.sh  compile.sh  sf-config.json
aur_utils/include/: DefaultFactory.hpp  Hellow.hpp
aur_utils/src/: main.cpp
common/systems/assimp/: AssImpDefines.h  AssImpHelper.cpp  AssImpHelper.hpp  AssImpShader.cpp  AssImpShader.hpp  AssImpShaderSrc.hpp  AssImpShadowCube.cpp  AssImpShadowCube.hpp  AssImpShadowMap.cpp  AssImpShadowMap.hpp  AssimpSystem.cpp  AssimpSystem.hpp  AssimpSystem.md  CMakeLists.txt  TexturedShader.cpp  TexturedShader.hpp  TexturedShaderSrc.hpp
common/systems/box2d/: Box2DComponent.hpp  Box2DSystem.cpp  Box2DSystem.hpp  Box2DSystem.md  CMakeLists.txt
common/systems/bullet/: BulletSystem.cpp  BulletSystem.hpp  CMakeLists.txt
common/systems/imgui_overlay/: CMakeLists.txt  ImGuiOverlaySystem.cpp  ImGuiOverlaySystem.hpp
common/systems/ogre/: AnimationManager.cpp  AnimationManager.hpp  AssimpLoader.cpp  AssimpLoader.h  AssimpObjectManager.cpp  AssimpObjectManager.hpp  CMakeLists.txt  CameraManager.cpp  CameraManager.hpp  ImGuiInputListener.cpp  ImGuiInputListener.h  ImGuiManager.cpp  ImGuiManager.hpp  ImGuiOverlay.cpp  ImGuiOverlay.h  InputManager.cpp  InputManager.hpp  LightManager.cpp  LightManager.hpp  MagicaVoxelObjectManager.cpp  (+15 more)
engine/: CMakeLists.txt  Component.hpp  EntityManager.hpp  GameObject.cpp  GameObject.hpp  IComponent.hpp  ISystem.hpp  Object.hpp  System.hpp  SystemManager.hpp
engine/include/: Component.hpp  ComponentFactory.hpp  EntityFactory.hpp  EntityManager.hpp  GameObject.hpp  IComponent.hpp  ISystem.hpp  KTypes.hpp  Object.hpp  Resources.hpp  SpriteComponent.hpp  System.hpp  SystemManager.hpp  TextComponent.hpp  TextSystem.hpp  Vector.hpp
engine/src/: Component.cpp  EntityManager.cpp  GameObject.cpp  Resources.cpp  SpriteComponent.cpp  SystemManager.cpp  TextComponent.cpp  TextSystem.cpp  Vector.cpp
example/: CMakeLists.txt  main.cpp  unit.lua  vcpkg.json
example/scripts/: test.lua  unit.lua
putils/: ADirectory.hpp  AStar.hpp  AbstractFactory.hpp  CLI.hpp  CMakeLists.txt  CellularAutomaton.hpp  Csv.hpp  Direction.hpp  Directory.hpp  EventManager.hpp  Observable.hpp  OperatorForwarder.hpp  Point.hpp  Process.hpp  QuadTree.hpp  RAII.hpp  README.md  Serializable.hpp  Singleton.hpp  Timer.hpp  UnixDirectory.hpp  WindowsDirectory.hpp  casts.hpp  chop.hpp  concat.hpp  erase.hpp  fwd.hpp  get_current_dir.hpp  get_last_error_as_string.hpp  go_to_bin_dir.hpp  hash.hpp  json.hpp  lock_and_run.hpp  rand.hpp  read_stream.hpp  regex.hpp  remove_if.hpp  same_sign.hpp  sign.hpp  static_if.hpp  (+2 more)
putils/connection/: ATCPConnection.hpp  ATCPListener.hpp  ITCPConnection.hpp  ITCPListener.hpp  OpenSSLTCPConnection.hpp  OpenSSLTCPListener.hpp  README.md  TCPConnection.hpp  TCPListener.hpp
putils/devices/: CMakeLists.txt  KeyState.hpp  Keyboard.hpp  Mouse.hpp  README.md
putils/http/: CMakeLists.txt  HttpMessage.hpp  HttpServer.hpp  Packets.hpp
putils/mediator/: BaseModule.cpp  BaseModule.hpp  CMakeLists.txt  DataPacket.hpp  Mediator.cpp  Mediator.hpp  Module.hpp
putils/meta/: CMakeLists.txt  GenLinearHierarchy.hpp  apply.hpp  for_each.hpp  has_type.hpp  type.hpp  type_map.hpp
putils/pluginManager/: CMakeLists.txt  Export.hpp  Library.hpp  LibraryFactory.cpp  LibraryFactory.hpp  PluginManager.cpp  PluginManager.hpp  README.md  UnixLibrary.cpp  UnixLibrary.hpp  WindowsLibrary.cpp  WindowsLibrary.hpp
putils/pse/: AnimatedSprite.cpp  AnimatedSprite.hpp  CMakeLists.txt  CompositeAnimatedSprite.cpp  CompositeAnimatedSprite.hpp  Engine.cpp  Engine.hpp  Grid.cpp  Grid.hpp  README.md  SfmlUtils.hpp  Shape.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  ViewItem.cpp  ViewItem.hpp
systems/assimp/: AssImpHelper.cpp  AssImpHelper.hpp  AssImpHelper.md  AssImpShader.cpp  AssImpShader.hpp  AssImpShader.md  AssImpShaderSrc.hpp  AssImpShadowCube.cpp  AssImpShadowCube.hpp  AssImpShadowCube.md  AssImpShadowMap.cpp  AssImpShadowMap.hpp  AssImpShadowMap.md  AssimpSystem.cpp  AssimpSystem.hpp  AssimpSystem.md  CMakeLists.txt
systems/bullet/: BulletSystem.cpp  BulletSystem.hpp  BulletSystem.md  CMakeLists.txt
systems/glfw/: CMakeLists.txt  GLFWSystem.cpp  GLFWSystem.hpp  GLFWSystem.md
systems/kreogl/: CMakeLists.txt  KreoglAnimationFilesComponent.hpp  KreoglDebugGraphicsComponent.hpp  KreoglModelComponent.hpp  KreoglSystem.cpp  KreoglSystem.hpp  KreoglSystem.md  PutilsToGLM.hpp
systems/opengl/: CMakeLists.txt  Controllers.cpp  Controllers.hpp  Controllers.md  Debug.cpp  Debug.hpp  DirLight.cpp  DirLight.hpp  GodRaysDirLight.cpp  GodRaysDirLight.hpp  GodRaysPointLight.cpp  GodRaysPointLight.hpp  GodRaysSpotLight.cpp  GodRaysSpotLight.hpp  Highlight.cpp  Highlight.hpp  LightSphere.cpp  LightSphere.hpp  OpenGLSystem.cpp  OpenGLSystem.hpp  OpenGLSystem.md  PointLight.cpp  PointLight.hpp  ShaderHelper.cpp  ShaderHelper.hpp  ShadowCube.cpp  ShadowCube.hpp  ShadowMap.cpp  ShadowMap.hpp  SkyBox.cpp  SkyBox.hpp  SpotLight.cpp  SpotLight.hpp  Text.cpp
systems/recast/: CMakeLists.txt  Common.hpp  NavMeshBuilder.cpp  Pathfinding.cpp  RecastAgentComponent.hpp  RecastComponent.hpp  RecastCrowdComponent.hpp  RecastDebugShader.cpp  RecastDebugShader.hpp  RecastNavMeshComponent.hpp  RecastSystem.cpp  RecastSystem.hpp  RecastSystem.md  UniquePtr.hpp
systems/sfml/: CMakeLists.txt  SFMLSystem.cpp  SFMLSystem.hpp  SFMLSystem.md  SFMLTextureComponent.hpp  SFMLWindowComponent.hpp
(+2760 files in other folders)
